2008-12-13  Jürg Billeter  <j@bitron.ch>

	* gobject/valadbusmodule.vala:

	Support reading and writing nullable GLib.Value values

2008-12-13  Jürg Billeter  <j@bitron.ch>

	* vapi/gsl.vapi:

	Improve gsl_histogram_calloc_range binding,
	patch by Matías De la Puente, fixes bug 564387

2008-12-13  Jürg Billeter  <j@bitron.ch>

	* vapi/glib-2.0.vapi:

	Remove g_thread_init binding, should never be called manually

2008-12-13  Jürg Billeter  <j@bitron.ch>

	* vala/valagenieparser.vala:
	* vala/valaparser.vala:

	Remove workarounds for old Vala versions

2008-12-13  Jürg Billeter  <j@bitron.ch>

	* vala/valablock.vala:

	Detect conflicting local variables in parent scopes

	* vala/valaarraycreationexpression.vala:
	* vala/valacodewriter.vala:
	* vala/valaforeachstatement.vala:
	* vala/valagenieparser.vala:
	* vala/valaparser.vala:
	* gobject/valaccodebasemodule.vala:
	* gobject/valaccodecontrolflowmodule.vala:
	* gobject/valaccodemethodcallmodule.vala:
	* gobject/valagobjectmodule.vala:
	* vapigen/valagidlparser.vala:

	Fix conflicting local variables

2008-12-12  Jürg Billeter  <j@bitron.ch>

	* gobject/valadbusclientmodule.vala:
	* gobject/valadbusmodule.vala:

	Support reading multi-dimensional arrays in static D-Bus clients

2008-12-12  Jürg Billeter  <j@bitron.ch>

	* gobject/valadbusclientmodule.vala:
	* gobject/valadbusmodule.vala:

	Fix array length and size handling in static D-Bus clients

2008-12-12  Jürg Billeter  <j@bitron.ch>

	* vapi/curses.vapi:

	Add missing [Compact]

2008-12-11  Jürg Billeter  <j@bitron.ch>

	* vapi/packages/libsoup-2.4/:

	Updated to libsoup 2.25.2

	* vapi/libsoup-2.4.vapi: regenerated

2008-12-10  Jürg Billeter  <j@bitron.ch>

	* vapi/rasqal.vapi:

	Add bindings to support LAQRS extensions

2008-12-09  Jürg Billeter  <j@bitron.ch>

	* gobject/valagsignalmodule.vala:

	Do not use g_signal_connect_object if the target object is not a
	GObject, fixes bug 539614

2008-12-09  Thijs Vermeir  <thijsvermeir@gmail.com>
